<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="result_imc"
            type="java.lang.String" />

        <variable
            name="data_weight"
            type="java.lang.String" />

        <variable
            name="data_height"
            type="java.lang.String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ResultActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/add_height"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@{data_height}"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/add_weight"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@{data_weight}"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/body_mass_index"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/result_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@{result_imc}"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:divider="@color/black"
            android:showDividers="middle"
            android:stretchColumns="1">

            <TableRow android:id="@+id/row_under_weight">

                <TextView
                    android:padding="10sp"
                    android:text="@string/less_than_18_5" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/under_weight" />
            </TableRow>

            <TableRow android:id="@+id/row_normal_weight">

                <TextView
                    android:padding="10sp"
                    android:text="@string/between18_5_and_24_9" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/normal_weight" />
            </TableRow>

            <TableRow android:id="@+id/row_overweight">

                <TextView
                    android:padding="10sp"
                    android:text="@string/between25_and_29_9" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/overweight" />
            </TableRow>

            <TableRow android:id="@+id/row_obesity1">

                <TextView
                    android:padding="10sp"
                    android:text="@string/between30_and_34_9" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/class1_obesity" />
            </TableRow>

            <TableRow android:id="@+id/row_obesity2">

                <TextView
                    android:padding="10sp"
                    android:text="@string/between35_and_39_9" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/class2_obesity" />
            </TableRow>

            <TableRow android:id="@+id/row_obesity3">

                <TextView
                    android:padding="10sp"
                    android:text="@string/more_than_40" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/class3_obesity" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</layout>